--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
 
     <main>
-        
-        <form action="">
+        <form action="/" id="formRegister">
             <div class="form-title">
                 <h1>CADASTRE-SE</h1>
                 <p>Basta preencher o formulário!</p>
