--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <input type="text" name="phone" id="phone" placeholder="(00) 91234-5678" required>
                 </div>
                 <div class="form-content">
-                    <label for="">Email:</label>
+                    <label for="email">Email:</label>
                     <input type="email" name="email" id="email" placeholder="seuemail@email.com" required>
                 </div>
                 <div class="form-content">
